tests/invalidTest/other/bool_cast1.q
# EXPECT type cannot be converted
def void errorDef(){
    uint1 a = 1
}